[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/scripts/Ply_Droplet.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/droplet_idle_0.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/droplet_idle_1.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/droplet_idle_2.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/droplet_damage_0.png" type="Texture" id=5]
[ext_resource path="res://assets/gfx/droplet_jump_0.png" type="Texture" id=6]
[ext_resource path="res://assets/gfx/droplet_walk_0.png" type="Texture" id=7]
[ext_resource path="res://assets/gfx/droplet_walk_1.png" type="Texture" id=8]
[ext_resource path="res://assets/gfx/droplet_death_0.png" type="Texture" id=9]
[ext_resource path="res://assets/gfx/sfx_jump.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/gfx/sfx_damaged.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/gfx/sfx_death.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/gfx/sfx_pickup.ogg" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), null, ExtResource( 5 ), null, ExtResource( 5 ), null, ExtResource( 5 ), null, ExtResource( 5 ), null, ExtResource( 5 ), null ],
"loop": true,
"name": "damage",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 6.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="Ply_Droplet" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Ply_Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="Ply_Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SFX_Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -6.0

[node name="SFX_Damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="SFX_Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="SFX_Pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
